Sat Mar  8 20:01:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsc.c: reverse this change from r1320, that causes upsc
   to segfault when running it with the -l or -L options

Fri Mar  7 19:17:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: extend three phase support, rename 'bypass.*'
   variables to standard 'input.bypass.*'

Fri Mar  7 19:11:07 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - add support for three phase
   - detect UPS type
 - drivers/usbhid-ups.[ch]: handle manual/service and automatic
   bypass separately (will show up as BYPASS in 'ups.status' and
   informative message will be shown in 'ups.alarm'
 - docs/new-names.txt: add missing variables that are already
   widely used
 - data/cmdvartab: add description for missing variables and add
   missing units

Wed Mar  5 21:05:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/mge-xml: This driver has been replaced by the netxml-ups
   driver

Wed Mar  5 16:11:02 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Integrated Power Management (HAL integration)
   - general rework of {dstate,main}-hal.ch, using GMainLoop,
   - done some code cleaning and removal,
   - add support for DBus methods (with Shutdown and SetBeeper),
   - complete the documentation to mention the DBus (RW) interface.

Tue Mar  4 21:35:58 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/netxml-ups:
   - handle manual/service and automatic bypass separately (will
     show up as BYPASS in 'ups.status' and informative message
     will be shown in 'ups.alarm'
   - add (experimental) variables for bypass input (unofficial
     variable names)
   - handle unexpected whitespace characters in url better

Tue Mar  4 21:30:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - man/nutupsdrv.8: explain what happens when debugging is enabled
   for drivers

Mon Mar  3 19:57:11 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
